--- a/app/js/pages/profile.html
+++ b/app/js/pages/profile.html
@@ -138,7 +138,7 @@
                     <div class="col-md-12" ng-repeat="comment in comments">
                         <blockquote>
                             <p>{{comment.comment.comment}}</p>
-                            <footer>{{comment.comment.poster.user_fullname}} <br>&nbsp;&nbsp;<span style="font-size: 10px">{{comment.comment.date_posted}}</span></footer>
+                            <footer><a style="display: inline;" href="#/profile/{{comment.comment.poster.user_id}}">{{comment.comment.poster.user_fullname}}</a> <br>&nbsp;&nbsp;<span style="font-size: 10px">{{comment.comment.date_posted}}</span></footer>
                         </blockquote>
                     </div>
                 </div>
@@ -151,7 +151,7 @@
                     </div>
                     <div class="col-md-12">
                         <div class="form-group">
-                            <button class="btn btn-success btn-sm" ng-click="postComment(commentMessage)"><i class="fa fa-comment"></i> Reply Comment</button>
+                            <button class="btn btn-success btn-sm" ng-click="postComment(commentMessage)" ng-disabled="commentMessage == ''"><i class="fa fa-comment"></i> Reply Comment</button>
                             <button type="button" class="btn btn-success btn-sm"><i class="fa fa-file"></i> Send Proposal</button>
                         </div>
                     </div>
