--- a/app/js/pages/editProfile.html
+++ b/app/js/pages/editProfile.html
@@ -23,51 +23,31 @@
         </div>
         <br/>
 
-        <form>
+        <form name="userForm" novalidate>
             <div class="col-md-4 col-sm-12">
-                <div style="font-size: 15px">
-                    <label name="nickName"<strong>Nickname</strong></label>
-                    <input type="text" class="form-control" id="nickName" ng-maxlength=20 placeholder="How do you want us to remember you?" required />
-                    <small style="color:#ff0000">
-                        <em>
-                            *PT community will know you by this name
-                        </em>
-                    </small>
-                </div>
-                <div class="form-group" style="font-size: 15px">
-                    <textarea class="form-control" rows="3" placeholder="Tell us more about you"></textarea>
-                    <small style="color:#ff0000;">
-                        <em>
-                            *This will be your opening description in your profile
-                        </em>
-                    </small>
-                </div>
-                <div class="form-group" style="font-size: 15px">
-                    <label for="contact" class="control-label"><strong>Contact</strong></label>
-                    <input type="number" class="form-control" id="contact" placeholder="Mobile number   (start with +639**)"
+                <div class="form-group">
+                    <label>Nick name</label>
+                    <input type="text" name="name" class="form-control"
+                           ng-model="main.nickName"
+                           ng-minlength="5"
+                           ng-maxlength="10"
                            required>
+                    <!-- ngMessages goes here -->
+                    <div class="help-block" ng-messages="userForm.name.$error" ng-if="userForm.name.$touched">
+                        <p ng-message="minlength">Your nickname is too short.</p>
+
+                        <p ng-message="maxlength">Your nickname is too long.</p>
+
+                        <p ng-message="required">Your nickname is required.</p>
+                    </div>
                 </div>
                 <div class="form-group">
-                    <input type="number" class="form-control" id="contact" placeholder="Landline (Please enter area code)"
-                           required>
+                    <label>Description</label>
+                    <textarea class="form-control"  rows="3"
+                              required></textarea>
                 </div>
                 <div class="form-group">
-                    <input type="email" class="form-control" id="contact" placeholder="Email Address" required>
                 </div>
-            </div>
-            <div class="col-md-4 col-sm-12" style="font-size: 15px">
-                <label class="control-label"><strong>Preferred Meeting Place</strong></label>
-                <textarea class="form-control" rows="3" placeholder="Complete Information for preferred meeting place"></textarea>
-                <div>
-                    <label class="control-label"><strong>Additional Metting place (Optional)</strong></label>
-                    <textarea class="form-control" rows="3" placeholder="Complete Information for preferred meeting place"></textarea>
-                </div>
-                <br/>
-                <div align="right">
-                    <button type="submit" class="btn btn-success">Update Profile</button>
-                    <button type="reset" class="btn btn-danger">Reset</button>
-                </div>
-            </div>
         </form>
         <br/>
         <br/>
