tiny mce and follow and unfollow schemes

--- a/app/js/pages/editProfile.html
+++ b/app/js/pages/editProfile.html
@@ -62,6 +62,7 @@
                 <div>
                     <label class="control-label"><strong>Additional Metting place (Optional)</strong></label>
                     <textarea class="form-control" rows="3" placeholder="Complete Information for preferred meeting place"></textarea>
+                    <textarea class="form-control" rows="3" ng-model="commentMessage" ui-tinymce></textarea>
                 </div>
                 <br/>
                 <div align="right">
