--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <script src="bower_components/gsap/src/minified/TweenMax.min.js"></script>
     <script src="bower_components/underscore/underscore-min.js"></script>
     <script src="bower_components/angular-messages/angular-messages.min.js"></script>
-    <script src="//tinymce.cachefly.net/4.2/tinymce.min.js"></script>
+    <script src="plugins/tinymce/tinymce.min.js"></script>
     <script src="bower_components/angular-ui-tinymce/src/tinymce.js"></script>
     <script src="app/js/app.js"></script>
     <script src="app/js/routing.js"></script>
@@ -72,6 +72,7 @@
     <script src="app/js/services/profileService.js"></script>
     <script src="app/js/services/permissionsService.js"></script>
     <script src="app/js/services/commentService.js"></script>
+
     <!--Factories-->
     <script src="app/js/factories/globals.js"></script>
 
