--- a/app/js/pages/profile.html
+++ b/app/js/pages/profile.html
@@ -137,7 +137,8 @@
                 <div class="row">
                     <div class="col-md-12" ng-repeat="comment in comments">
                         <blockquote>
-                            <p>{{comment.comment.comment}}</p>
+                            <div ng-bind-html="comment.comment.comment | to_trusted"></div>
+                            <br>
                             <footer><a style="display: inline;" href="#/profile/{{comment.comment.poster.user_id}}">{{comment.comment.poster.user_fullname}}</a> <br>&nbsp;&nbsp;<span style="font-size: 10px">{{comment.comment.date_posted}}</span></footer>
                         </blockquote>
                     </div>
@@ -146,7 +147,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="form-group">
-                            <textarea class="form-control" ng-model="commentMessage" rows="3"></textarea>
+                            <textarea class="form-control" rows="3" ng-model="commentMessage" ui-tinymce>fsdfsd</textarea>
                         </div>
                     </div>
                     <div class="col-md-12">
