--- a/app/js/pages/profile.html
+++ b/app/js/pages/profile.html
@@ -147,7 +147,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="form-group">
-                            <textarea class="form-control" rows="3" ng-model="commentMessage" ui-tinymce>fsdfsd</textarea>
+                            <textarea class="form-control" rows="3" ng-model="commentMessage"></textarea>
                         </div>
                     </div>
                     <div class="col-md-12">
