--- a/app/js/pages/editProfile.html
+++ b/app/js/pages/editProfile.html
@@ -23,48 +23,70 @@
         </div>
         <br/>
 
-        <form data-toggle="validator" role="form" class="col-md-4 col-sm-4">
-            <div class="form-group" style="font-size: 15px">
-                <label for="nickName" class="control-label"><strong>Nickname</strong></label>
-                <input type="text" class="form-control" id="nickName" placeholder="How do you want us to remember you?"
-                       required>
-                <small>
-                    <em>
-                        *PT community will know you by this name
-                    </em>
-                </small>
+        <form name="userForm" novalidate>
+            <div role="form" class="col-md-4 col-sm-4">
+                <div class="form-group" >
+                    <label>Name</label>
+                    <input type="text" name="name" class="form-control"
+                           ng-model="main.name"
+                           ng-minlength="5"
+                           ng-maxlength="10"
+                           required>
+
+                    <!-- ngMessages goes here -->
+                    <div class="help-block" ng-messages="userForm.name.$error" ng-if="userForm.name.$touched">
+                        <p ng-message="minlength">Your name is too short.</p>
+                        <p ng-message="maxlength">Your name is too long.</p>
+                        <p ng-message="required">Your name is required.</p>
+                    </div>
+
+                </div>
+                <div class="form-group" style="font-size: 15px">
+                    <textarea class="form-control" rows="3" ng-model="commentMessage" ui-tinymce>fsdfsd</textarea>
+                    <small>
+                        <em>
+                            *This will be your opening description in your profile
+                        </em>
+                    </small>
+                </div>
+                <div <strong>Contact</strong>
+                <label>mobile</label>
+                    <label for="contact" class="control-label">
+                    <input type="text" name="name" class="form-control" placeholder="Mobile Number. (Must start with +63**)"
+                           ng-model="main.name"
+                           ng-minlength="13"
+                           required>
+                    <div class="help-block" ng-messages="userForm.name.$error" ng-if="userForm.name.$touched" style="color: #ff0000">
+                        <p ng-message="minlength" style="font-size: 14px">Your number is too short. the number must start with +63**</p>
+                        <p ng-message="required" style="font-size: 14px">Your number is required.</p>
+                    </div>
+
+                </div>
+                <div class="form-group">
+                    <input type="text" name="landline" class="form-control" placeholder="Landline number. (Must start with area code)"
+                           ng-model="main.name"
+                           ng-minlength="9">
+                    <div class="help-block" ng-messages="userForm.name.$error" ng-if="userForm.name.$touched" style="color: #ff0000">
+                        <p ng-message="minlength" style="font-size: 14px">Your number is too short. the number must start with +63**</p>
+                    </div>
+
+                </div>
+                <div class="form-group">
+                    <input type="email" class="form-control" id="contact" placeholder="Email Address" required>
+                </div>
             </div>
-            <div class="form-group" style="font-size: 15px">
-                <textarea class="form-control" rows="3" placeholder="Tell us more about you"></textarea>
-                <small>
-                    <em>
-                        *This will be your opening description in your profile
-                    </em>
-                </small>
-            </div>
-            <div class="form-group" style="font-size: 15px">
-                <label for="contact" class="control-label"><strong>Contact</strong></label>
-                <input type="number" class="form-control" id="contact" placeholder="Mobile number   (start with +639**)"
-                       required>
-            </div>
-            <div class="form-group">
-                <input type="number" class="form-control" id="contact" placeholder="Landline (Please enter area code)"
-                       required>
-            </div>
-            <div class="form-group">
-                <input type="email" class="form-control" id="contact" placeholder="Email Address" required>
-            </div>
-        </form>
-        <form>
             <div class="form-group col-md-4 col-sm-4" style="font-size: 15px">
                 <label class="control-label"><strong>Preferred Meeting Place</strong></label>
-                <textarea class="form-control" rows="3" placeholder="Complete Information for preferred meeting place"></textarea>
+                <textarea class="form-control" rows="3"
+                          placeholder="Complete Information for preferred meeting place"></textarea>
+
                 <div>
                     <label class="control-label"><strong>Additional Metting place (Optional)</strong></label>
-                    <textarea class="form-control" rows="3" placeholder="Complete Information for preferred meeting place"></textarea>
-                    <textarea class="form-control" rows="3" ng-model="commentMessage" ui-tinymce></textarea>
+                    <textarea class="form-control" rows="3"
+                              placeholder="Complete Information for preferred meeting place"></textarea>
                 </div>
                 <br/>
+
                 <div align="right">
                     <button type="submit" class="btn btn-success">Update Profile</button>
                     <button type="reset" class="btn btn-danger">Reset</button>
@@ -81,7 +103,6 @@
                 <br/>
                 <br/>
             </div>
-
         </form>
     </div>
 </div>
