--- a/app/js/pages/login.html
+++ b/app/js/pages/login.html
@@ -23,45 +23,48 @@
     <br>
 
     <div class="container">
-        <div class="row" style="border: 1px solid #E5E5E5;">
+        <div class="row">
             <div class="col-sm-8 col-md-8">
-                <div class="text-center" style="border-top: 1px solid #e5e5e5">
+                <div class="text-center">
                     <h4>Advertisement here</h4>
                 </div>
             </div>
-            <div class="col-sm-4 col-md-4 col-md-offset-0 col-sm-offset-0" style="background: white">
-                <div class="page-header" style="margin-top: 0px; text-align: center">
+            <div  class="col-sm-4 col-md-4 col-md-offset-0 col-sm-offset-0" style="background: white" >
+                <div class="page-header" style="text-align:center">
                     <h4>Login</h4>
                 </div>
-                <div class="navbar-form css-form" role="login" novalidate action="#">
-                    <div class="form-group" style="width: 100%">
-                        <div style="mso-element-frame-height: 300px">
-                            <input type="text" ng-model="user.userName" required class="form-control"
-                                   style="height: 40px; width: 100%; padding: 5px; font-size: 18px" placeholder="Username">
-                            <br>
-                            <br>
+                <form style="margin-top: 0px" !important>
+                    <div class="userForm" role="login" novalidate action="#">
+                        <div class="form-group" style="width: 100%">
+                            <div>
+                                <input type="text" ng-model="user.userName" required class="form-control"
+                                       style="height: 40px; width: 100%; padding: 5px; font-size: 18px" placeholder="Username">
+                            </div>
+                        </div>
+                        <div class="form-group" style="width: 100%">
                             <input type="password" ng-model="user.password" required class="form-control"
                                    style="height: 40px; width: 100%; padding: 5px; font-size: 18px" placeholder="Password">
                         </div>
-
+                        <button type="button" class="btn btn-success btn-extra" ng-click="login()"><b>Login Here!</b></button>
+                    </div>
+                    <br/>
+                    <div class="form-group" style="border-top: 1px solid #E5E5E5; width: 100%" align="center">
+                        <br/>
+                        <button type="button" class="btn btn-info btn-sm"><b>Login using Facebook</b></button>
+                        <button type="button" class="btn btn-danger btn-sm"><b>Login using Gmail</b></button>
+                    </div>
+                    <div class="text-center">
+                        <a href="#forgotPassword" style="display: inline; color: black"> Forgot password?</a>
+                        <a href="#register" style="display: inline; color: #0033cc"> Register here</a>
                     </div>
                     <br>
                     <br>
-                    <button style="width: 100px" class="btn btn-success btn-extra" ng-click="login()">Login Here!</button>
-                    <a href="#forgotPassword" style="display: inline; color: black"> Forgot password?</a>
-                    <a href="#register" style="display: inline; color: #0033cc"> Register here</a>
-                </div>
-                <br/>
-                <div class="text-center">
-                    <button type="button" class="btn btn-info btn-xs" style="width: 140px"><b>Login using Facebook</b></button>
-                    &nbsp; or
-                    &nbsp;
-                    <button type="button" class="btn btn-danger btn-xs" style="width: 140px"><b>Login using Gmail</b></button>
-                </div>
-                <br>
-                <br>
+                    <br/>
+                    <br/>
+                </form>
             </div>
         </div>
+
     </div>
 
 
